data/derived/comb/progs/unify/prog6837.ml.out
Characters 42-43:
  let f a x = bigAdd a::0 (mulByDigit x l1) in
                        ^
Error: This expression has type int
       This is not a function; it cannot be applied.
